Added play page and button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 padding: 20px 15px;
                 text-align: center;
                 font-size: 30px;
+                margin: 3px;
             }
         </style>
     </head>
@@ -46,7 +47,8 @@
         <div id="centre-box" class="central">
             <h1 id="game-title">Word Game</h1>
             <p>Is this even different</p>
-            <a href="./instructions.html"><button class="button" onclick="">Here</button></a>
+            <a href="./instructions.html"><button class="button" onclick="">Instructions</button></a><br>
+            <a href="./game.html"><button class="button" onclick="">Play</button></a>
         </div>
     </body>
 </html>
