--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html>
     <head>
         <title>Word Game</title>
+        <link rel="stylesheet" href="styling.css">
         <style>
-            * {
-                font-family: courier new;
-                font-variant: mono;
-                text-align: center;
-            }
-
             .central {
                 position: absolute;
                 top: 0;
@@ -23,6 +18,7 @@
                 border: 3px solid black;
                 border-radius: 30px;
                 padding: 10px;
+                text-align: center;
 
                 margin: auto;
             }
@@ -47,8 +43,8 @@
         <div id="centre-box" class="central">
             <h1 id="game-title">Word Game</h1>
             <p>Is this even different</p>
-            <a href="./instructions.html"><button class="button" onclick="">Instructions</button></a><br>
-            <a href="./game.html"><button class="button" onclick="">Play</button></a>
+            <a href="./instructions.html"><button class="button">Instructions</button></a><br>
+            <a href="./game.html"><button class="button">Play</button></a>
         </div>
     </body>
 </html>
