--- a/game.html
+++ b/game.html
@@ -24,6 +24,7 @@
             let letters = "";
             let initialTimeLeft = 5;
             let timeLeft;
+            let validWordAttempts = [];
             
             function addLetter(letter) {
                 letters = letters + letter;
@@ -84,6 +85,7 @@
                 let wordList = document.getElementById("word-list");
                 if (validWord(wordInput.value)) {
                     wordList.innerHTML += "<p>" + wordInput.value + "</p>";
+                    validWordAttempts.push(wordInput.value);
                 }
                 else {
                     console.log("Invalid word");
@@ -104,7 +106,6 @@
                     displayTimeBar();
                 } else {
                     clearInterval(timer);
-                    document.getElementById('timeLeft').innerHTML = 'Time Up';
                     gameEnd();
                 }
             }
@@ -118,6 +119,12 @@
 
                 percentFill = 100 - ((timeLeft / initialTimeLeft) * 100);
                 barFill.style.width = percentFill + "%";
+            }
+
+            function gameEnd() {
+                sessionStorage.setItem("letters", letters);
+                sessionStorage.setItem("wordAttempts", JSON.stringify(validWordAttempts));
+                window.location.href = "./results.html";
             }
         </script>
     </head>
