--- a/game.html
+++ b/game.html
@@ -19,8 +19,38 @@
         </style>
         <script src="utilities.js"></script> 
         <script>
-            const vowels = "aeiou";
-            const consonants = "bcdfghjklmnpqrstvwxwz";
+            let vowels = {
+                "a": 15,
+                "e": 21,
+                "i": 13,
+                "o": 13,
+                "u": 5
+            }
+
+            let consonants = {
+                "b": 2,
+                "c": 3,
+                "d": 6,
+                "f": 2,
+                "g": 3,
+                "h": 2,
+                "j": 1,
+                "k": 1,
+                "l": 5,
+                "m": 4,
+                "n": 8,
+                "p": 4,
+                "q": 1,
+                "r": 9,
+                "s": 9,
+                "t": 9,
+                "v": 1,
+                "w": 1,
+                "x": 1,
+                "y": 1,
+                "z": 1
+            }
+
             let letters = "";
             let maxTime = 60;
             let timeLeft;
@@ -48,12 +78,34 @@
                 document.getElementById("word-form").attributes.setNamedItem("hidden");
             }
 
+            function getLetterFromDistribution(dist) {
+                let probTotal = Object.values(dist).reduce((accumulator, currentValue) => accumulator + currentValue, 0);
+                let target = getRndInteger(1, probTotal);
+                let runningTotal = 0;
+                for (let k of Object.keys(dist)) {
+                    runningTotal += dist[k];
+                    if (runningTotal > target) {
+                        return k;
+                    }
+                }
+                throw new Error("Random target number not in probability range."); 
+            }
+
+            function adjustLetterProbability(dist, letter, fraction) {
+                dist[letter] = dist[letter] * fraction;
+                return dist;
+            }
+
             function addVowel() {
-                addLetter(getRndElement(vowels));
+                let letter = getLetterFromDistribution(vowels);
+                vowels = adjustLetterProbability(vowels, letter, 0.5);
+                addLetter(letter);
             }
 
             function addConsonant() {
-                addLetter(getRndElement(consonants));
+                let letter = getLetterFromDistribution(consonants);
+                consonants = adjustLetterProbability(consonants, letter, 0.5);
+                addLetter(letter);
             }
 
             function validWord(word) {
