--- a/instructions.html
+++ b/instructions.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Word Game - Instructions</title>
-    </head>
-    <body>
-        How to play the game.
-    </body>
+
+<head>
+    <title>Scrountdown - Instructions</title>
+    <link rel="stylesheet" href="styling.css">
+</head>
+
+<body>
+    How to play the game.
+</body>
+
 </html>
