--- a/index.html
+++ b/index.html
@@ -6,18 +6,13 @@
     <link rel="stylesheet" href="styling.css">
     <style>
         #title-box {
-            background-color: #f5f5f5;
-            border-style: solid;
-            border-radius: 20px;
-            border-width: 5px;
-            border-color: black;
-
             padding: 20px;
             max-width: 900px;
             margin-bottom: 20px;
         }
 
         #game-title {
+            font-family: "Playfair Display";
             font-size: 8em;
         }
 
@@ -27,54 +22,36 @@
             justify-content: space-between;
             align-items: center;
 
-            background-color: #f5f5f5;
-            border-style: solid;
-            border-radius: 20px;
-            border-width: 5px;
-            border-color: black;
             padding: 30px;
-
             max-width: 500px;
         }
 
         p {
             font-size: 1.1em;
             margin-bottom: 20px;
+            text-align: center;
         }
 
-        .button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 20px;
-            background-color: #3498db;
-            color: white;
-            font-size: 2em;
-            cursor: pointer;
-            margin-bottom: 10px;
-            transition: background-color 0.3s ease;
-
-            min-width: 250px;
+        button {
+            width: 270px;
         }
 
-        .button:hover {
-            background-color: #2980b9;
-        }
-
-        .button+.button {
-            margin-left: 5px;
+        #credits {
+            margin-bottom: 0;
+            text-align: right;
         }
     </style>
 </head>
 
 <body>
-    <div id="title-box">
+    <div id="title-box" class="contentBox">
         <h1 id="game-title">Scrountdown</h1>
     </div>
-    <div id="centre-box">
+    <div id="centre-box" class="contentBox">
         <p>Put your vocab to the test in this exciting fusion of two beloved games!</p>
-        <a href="./instructions.html"><button class="button">Instructions</button></a><br>
-        <a href="./game.html"><button class="button">Play</button></a>
-        <p>By Caleb Mullan</p>
+        <a href="./game.html"><button>Play</button></a>
+        <a href="./instructions.html"><button>Instructions</button></a><br>
+        <p id="credits">By Caleb Mullan</p>
     </div>
 </body>
 
