--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Word Game</title>
+    <title>Scrountdown - Menu</title>
     <link rel="stylesheet" href="styling.css">
     <style>
         #title-box {
