--- a/instructions.html
+++ b/instructions.html
@@ -14,10 +14,15 @@
             padding-bottom: 10px;
         }
 
-        #image-wrap {
+        #centre-wrap {
             display: flex;
-            justify-content: center;
-            align-content: center;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        button {
+            margin-top: 20px;
         }
     </style>
 </head>
@@ -28,7 +33,8 @@
         <p>Letter selection: You must 9 letters to form words from, selecting a random vowel or random consonant for each one.</p>
         <p>Word forming: Enter as many words as you can using your 9 letters before the 1 minute timer runs out!</p>
         <p>Scoring: Once your time is gone, your results will be displayed. Every correct word you enter will earn you points using Scrabble scoring (see below). However, every word entered that isn't recognized will result in -10 points, so be warned!</p>
-        <div id="image-wrap">
+        <div id="centre-wrap">
             <img src="./images/scrabble_tiles.jpg" width="400" height="400">
+            <a href="./index.html"><button>Return to menu</button></a>
         </div>
 </html>
